change sms to message and notify message added swagger
